# bullshark-bft

./: Cargo.toml
.config/: hakari.toml
.github/workflows/: rust.yml
crates/mysten-common/: Cargo.toml
crates/mysten-common/src/: lib.rs
crates/mysten-common/src/sync/: mod.rs  notify_once.rs  notify_read.rs
crates/mysten-metrics/: Cargo.toml
crates/mysten-network/: Cargo.toml
crates/shared-crypto/: Cargo.toml
crates/sui/: Cargo.toml
crates/sui-cost-tables/: Cargo.toml
crates/sui-keys/: Cargo.toml
crates/sui-macros/: Cargo.toml
crates/sui-proc-macros/: Cargo.toml
crates/sui-protocol-constants/: Cargo.toml
crates/sui-types/: Cargo.toml
crates/sui-types/src/: error.rs
crates/telemetry-subscribers/: Cargo.toml
crates/telemetry-subscribers/src/: lib.rs
crates/typed-store/: Cargo.toml
crates/typed-store-derive/: Cargo.toml
crates/typed-store-derive/src/: lib.rs
crates/typed-store/src/: lib.rs  metrics.rs  test_db.rs  traits.rs
crates/typed-store/src/rocks/: iter.rs  mod.rs  safe_iter.rs  tests.rs
crates/typed-store/src/sally/: mod.rs
crates/typed-store/tests/: macro_tests.rs
narwhal/benchmark/: README.md
narwhal/benchmark/benchmark/: logs.py
narwhal/config/: Cargo.toml
narwhal/config/src/: committee.rs  lib.rs
narwhal/config/tests/snapshots/: config_tests__committee.snap  config_tests__committee.snap.new  config_tests__worker_cache.snap  config_tests__worker_cache.snap.new
narwhal/consensus/: Cargo.toml
narwhal/consensus/benches/: process_certificates.rs
narwhal/consensus/src/: bullshark.rs  consensus.rs  dag.rs  lib.rs  metrics.rs  tusk.rs
narwhal/consensus/src/tests/: bullshark_tests.rs  consensus_tests.rs  consensus_utils.rs  dag_tests.rs  randomized_tests.rs  tusk_tests.rs
narwhal/crypto/: Cargo.toml
narwhal/crypto/src/: hash.rs  keypair.rs  lib.rs  network_keypair.rs  signature.rs  traits.rs
narwhal/dag/: Cargo.toml
narwhal/dag/src/: node_dag.rs
narwhal/executor/: Cargo.toml
narwhal/executor/src/: lib.rs  subscriber.rs
narwhal/executor/tests/: consensus_integration_tests.rs
narwhal/network/: Cargo.toml
narwhal/network/src/: admin.rs  client.rs  connectivity.rs  failpoints.rs  lib.rs
narwhal/node/: Cargo.toml
narwhal/node/src/: generate_format.rs  keypair_file.rs  lib.rs  main.rs  metrics.rs  primary_node.rs  worker_node.rs
narwhal/node/tests/: node_smoke_test.rs  node_test.rs
narwhal/node/tests/staged/: narwhal.yaml
narwhal/primary/: Cargo.toml
narwhal/primary/src/: aggregators.rs  block_remover.rs  block_waiter.rs  certificate_fetcher.rs  certifier.rs  core.rs  lib.rs  metrics.rs  primary.rs  proposer.rs  state_handler.rs  synchronizer.rs
narwhal/primary/src/block_synchronizer/: handler.rs  mock.rs  mod.rs  peers.rs
narwhal/primary/src/block_synchronizer/tests/: block_synchronizer_tests.rs  handler_tests.rs
narwhal/primary/src/grpc_server/: configuration.rs  mod.rs  proposer.rs
narwhal/primary/src/tests/: block_remover_tests.rs  block_waiter_tests.rs  certificate_fetcher_tests.rs  certificate_tests.rs  certifier_tests.rs  common.rs  core_tests.rs  primary_tests.rs  proposer_tests.rs  synchronizer_tests.rs
narwhal/primary/tests/: causal_completion_tests.rs  integration_tests_proposer_api.rs  integration_tests_validator_api.rs  nodes_bootstrapping_tests.rs
narwhal/storage/: Cargo.toml
narwhal/storage/src/: certificate_store.rs  consensus_store.rs  header_store.rs  node_store.rs  payload_store.rs  proposer_store.rs  vote_digest_store.rs
narwhal/test-utils/: Cargo.toml
narwhal/test-utils/src/: cluster.rs  lib.rs
narwhal/types/: Cargo.toml
narwhal/types/benches/: batch_digest.rs  verify_certificate.rs
narwhal/types/src/: consensus.rs  error.rs  primary.rs  proto.rs  worker.rs
narwhal/types/src/tests/: batch_serde.rs  primary_type_tests.rs
narwhal/types/tests/: primary_tests.rs
narwhal/worker/: Cargo.toml
narwhal/worker/src/: batch_fetcher.rs  batch_maker.rs  client.rs  handlers.rs  lib.rs  metrics.rs  quorum_waiter.rs  transactions_server.rs  worker.rs
narwhal/worker/src/tests/: batch_maker_tests.rs  handlers_tests.rs  worker_tests.rs
