[workspace]
resolver = "2"

exclude = [
    "external-crates/move/extensions/move-table-extension",
    "external-crates/move/move-binary-format",
    "external-crates/move/move-binary-format/serializer-tests",
    "external-crates/move/move-borrow-graph",
    "external-crates/move/move-bytecode-verifier",
    "external-crates/move/move-bytecode-verifier/bytecode-verifier-tests",
    "external-crates/move/move-bytecode-verifier/fuzz",
    "external-crates/move/move-bytecode-verifier/invalid-mutations",
    "external-crates/move/move-bytecode-verifier/transactional-tests",
    "external-crates/move/move-command-line-common",
    "external-crates/move/move-compiler",
    "external-crates/move/move-compiler/transactional-tests",
    "external-crates/move/move-core/types",
    "external-crates/move/move-ir/types",
    "external-crates/move/move-ir-compiler",
    "external-crates/move/move-ir-compiler/move-bytecode-source-map",
    "external-crates/move/move-ir-compiler/move-ir-to-bytecode",
    "external-crates/move/move-ir-compiler/move-ir-to-bytecode/syntax",
    "external-crates/move/move-ir-compiler/transactional-tests",
    "external-crates/move/move-model",
    "external-crates/move/move-prover",
    "external-crates/move/move-prover/boogie-backend",
    "external-crates/move/move-prover/bytecode",
    "external-crates/move/move-prover/interpreter",
    "external-crates/move/move-prover/interpreter/crypto",
    "external-crates/move/move-prover/interpreter-testsuite",
    "external-crates/move/move-prover/move-abigen",
    "external-crates/move/move-prover/move-docgen",
    "external-crates/move/move-prover/move-errmapgen",
    "external-crates/move/move-prover/test-utils",
    "external-crates/move/move-stdlib",
    "external-crates/move/move-symbol-pool",
    "external-crates/move/move-vm/integration-tests",
    "external-crates/move/move-vm/paranoid-tests",
    "external-crates/move/move-vm/runtime",
    "external-crates/move/move-vm/test-utils",
    "external-crates/move/move-vm/transactional-tests",
    "external-crates/move/move-vm/types",
    "external-crates/move/testing-infra/module-generation",
    "external-crates/move/testing-infra/test-generation",
    "external-crates/move/testing-infra/transactional-test-runner",
    "external-crates/move/tools/move-bytecode-utils",
    "external-crates/move/tools/move-bytecode-viewer",
    "external-crates/move/tools/move-cli",
    "external-crates/move/tools/move-coverage",
    "external-crates/move/tools/move-disassembler",
    "external-crates/move/tools/move-explain",
    "external-crates/move/tools/move-package",
    "external-crates/move/tools/move-resource-viewer",
    "external-crates/move/tools/move-unit-test",
    "external-crates/move/tools/read-write-set",
    "external-crates/move/tools/read-write-set/dynamic",
    "external-crates/move/tools/read-write-set/types"
]

members = [
    "crates/mysten-network",
    "crates/mysten-util-mem",
    "crates/mysten-util-mem-derive",
    "crates/telemetry-subscribers",
    "crates/typed-store",
    "crates/typed-store-derive",
    "crates/x",
    "narwhal/config",
    "narwhal/consensus",
    "narwhal/crypto",
    "narwhal/dag",
    "narwhal/executor",
    "narwhal/network",
    "narwhal/node",
    "narwhal/primary",
    "narwhal/storage",
    "narwhal/test-utils",
    "narwhal/types",
    "narwhal/worker",
]

[workspace.package]
# This version string will be inherited by sui-core, sui-faucet, sui-node, sui-tools, sui-sdk, and sui crates.
version = "0.33.0"

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = 'packed'
# Without stripping, sui binary size would be > 1GB.
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

# Same as release, but build binary with debug symbols (binary size will be ~ 1GB).
[profile.release-dbgsym]
inherits = "release"
split-debuginfo = 'off'
strip = 'none'

# Inherits from the release profile above.
[profile.bench]
# For convenience.
strip = 'none'

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
tokio = "1.25.0"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "235211dc8195590f5353d38135f5ee51a267521e" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "235211dc8195590f5353d38135f5ee51a267521e", package = "fastcrypto-zkp" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "235211dc8195590f5353d38135f5ee51a267521e", package = "fastcrypto-tbls" }

# metrics
metrics = "0.20"
snarkos-metrics = { git = "https://github.com/eqlabs/snarkos", branch = "bft_testnet3", package = "snarkos-node-metrics" }

# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "40e3bf357313fe5caa924673711af8be4dc4096e" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "40e3bf357313fe5caa924673711af8be4dc4096e" }
anemo-cli = { git = "https://github.com/mystenlabs/anemo.git", rev = "40e3bf357313fe5caa924673711af8be4dc4096e"}
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "40e3bf357313fe5caa924673711af8be4dc4096e"}

mysten-network = { path = "crates/mysten-network" }
mysten-util-mem = { path = "crates/mysten-util-mem" }
telemetry-subscribers = { path = "crates/telemetry-subscribers" }
typed-store = { path = "crates/typed-store" }
typed-store-derive = { path = "crates/typed-store-derive" }
