[package]
name = "narwhal-crypto"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[dependencies]
fastcrypto.workspace = true
ark-bls12-377 = { version = "0.3.0", features = ["std"], optional = true }
eyre = "0.6.8"
rand = { version = "0.8.5", features = ["std"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_bytes = "0.11.7"
serde_with = "2.1.0"
tokio = { version = "1", features = ["sync", "rt", "macros"] }
shared-crypto = { path = "../../crates/shared-crypto"}
bcs = "0.1.4"
base64ct = "1.6"
proptest = "1.0.0"
proptest-derive = "0.3.0"

[dependencies.snarkvm-console]
version = "0.9.14"

[dependencies.bitvec]
version = "1.0"

[features]
default = []

[dev-dependencies]
bincode = "1.3.3"
hex-literal = "0.3.4"
serde_json = "1.0.88"
serde-reflection = "0.3.6"
