[package]
name = "narwhal-network"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[features]
metrics = ["dep:metrics", "dep:snarkos-metrics"]

[dependencies]
async-trait = "0.1.61"
backoff = { version = "0.4.0", features = ["tokio"] }
bytes = "1.3.0"
dashmap = "5.4.0"
fastcrypto = { workspace = true }
futures = "0.3.24"
quinn-proto = "^0.9.2"
parking_lot = "0.12.1"
rand = { version = "0.8.5", features = ["small_rng"] }
tokio = { version = "1", features = ["rt", "net", "sync", "macros", "time"] }
tracing = "0.1.36"

types = { path = "../types", package = "narwhal-types" }
crypto = { path = "../crypto", package = "narwhal-crypto" }

anyhow = "1.0.65"
mysten-common.workspace = true
anemo.workspace = true
anemo-tower.workspace = true
axum.workspace = true
axum-server = "0.4.2"
tower = "0.4.13"

[dependencies.metrics]
workspace = true
optional = true

[dependencies.snarkos-metrics]
workspace = true
optional = true

[dev-dependencies]
bincode = "1.3.3"
test-utils = { path = "../test-utils", package = "narwhal-test-utils" }
