[package]
name = "narwhal-node"
version = "0.1.0"
license = "Apache-2.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
edition = "2021"
publish = false

[features]
default= ["metrics"]
metrics = ["consensus/metrics", "executor/metrics", "network/metrics", "primary/metrics"]

[dependencies]
arc-swap = { version = "1.5.1", features = ["serde"] }
async-trait = "0.1.61"
bincode = "1.3.3"
bytes = "1.3.0"
cfg-if = "1.0.0"
clap = { version = "3.2.23", features = ["derive", "cargo"] }
futures = "0.3.24"
multiaddr = "0.17.0"
rand = "0.8.5"
rand_core = "0.6.4"
thiserror = "1.0.35"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.10"
tokio-util = { version = "0.7.4", features = ["codec"] }
tracing = "0.1.36"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.15", features = ["time", "env-filter"] }
url = "2.3.1"
axum = "0.6.18"
itertools = "0.10.5"

anyhow = { version = "1.0.64", features = ["backtrace"] }
config = { path = "../config", package = "narwhal-config" }
consensus = { path = "../consensus", package = "narwhal-consensus" }
crypto = { path = "../crypto", package = "narwhal-crypto" }
executor = { path = "../executor", package = "narwhal-executor" }
network = { path = "../network", package = "narwhal-network" }
primary = { path = "../primary", package = "narwhal-primary" }
storage = { path = "../storage", package = "narwhal-storage" }
types = { path = "../types", package = "narwhal-types" }
worker = { path = "../worker", package = "narwhal-worker" }

eyre = "0.6.8"
serde = {version = "1.0.144", features = ["derive"]}
roaring = "0.10.1"
schemars ="0.8.10"
derive_more = "0.99.17"
serde_with = "2.1.0"
signature = "1.6.0"

store = { path = "../../crates/typed-store", package = "typed-store" }
mysten-network = { path = "../../crates/mysten-network" }
telemetry-subscribers = { path = "../../crates/telemetry-subscribers" }

anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "0e0ef7054082a6f5a8921688e3d568761bc3be21" }
once_cell = "1.16.0"
fail = "0.5.1"

[dev-dependencies]
pretty_assertions = "1.3.0"
serde-reflection = "0.3.6"
serde_yaml = "0.8.26"
test-utils = { path = "../test-utils", package = "narwhal-test-utils" }
reqwest = { version = "0.11.13", features = ["json"] }

[[bin]]
name = "narwhal-node"
path = "src/main.rs"

[[example]]
name = "narwhal-generate-format"
path = "src/generate_format.rs"
test = false
